﻿更新履歴

==== Ver 1.3.3-dev(2016/xx/xx)
 * NEW: twemoji V2 に対応しました
  - 「絵文字を画像で表示する(Twemoji)」が有効な場合に Unicode 8.0 で追加された絵文字が表示されるようになります

==== Ver 1.3.2(2016/04/12)
 * NEW: touch.pixiv.net のサムネイル表示に対応 (pixiv.net は既に対応しています)
 * NEW: pic.twitter.com の画像に設定された代替テキストの取得に対応
  - 代替テキストが設定された画像の場合、発言一覧に含まれる画像 URL が代替テキストに置き換わって表示されます
 * CHG: スクリーンリーダーでの画面の読み上げを改善
 * FIX: 投稿欄の複数行入力が有効かつCtrl+Enterで投稿する設定の状態でハッシュタグの自動付与が行われない不具合を修正 (thx @nt776!)
 * FIX: タブレット端末などでサムネイル画像が1枚のみ表示された状態で2本指スクロールするとエラーが発生する問題を回避
 * FIX: 発言詳細部に表示されるハッシュタグやメンションで「URLをコピー」が機能しない不具合を修正 (thx @ufoprincess!)
 * FIX: 複数のタブで同時に新着ツイートを受信した場合に通知音が再生されない場合がある不具合を修正
 * FIX: タイムライン検索の結果を新規タブに表示した場合に、スクリーンネームなどが検索対象にならない不具合を修正 (thx @tests_peer!)
 * FIX: プロフィール画面の自己紹介に含まれるハッシュタグや @ユーザー名 のリンク先が正しくない不具合を修正 (thx @momdo_!)
 * FIX: NVDAで発言一覧の名前以降の列が読み上げられない環境がある現象を回避 (thx @i_hate_myself92!)
 * FIX: Bing翻訳APIのタイムアウト時のエラーが正しく処理されない不具合を修正

==== Ver 1.3.1(2015/12/28)
 * CHG: ツイート投稿時に意図せずTwitterがSMSコマンドとして解釈することを防ぐ「SMSコマンドを回避する」オプションを追加
  - D, DM および M から始まるツイートを投稿するとSMSコマンドと解釈されてエラーとなる問題を回避します
  - v1.2.9 までの「APIコマンドを回避する」と異なり、末尾にピリオドを追加するのではなくゼロ幅スペース (U+200B) を使うため表示上目立ちにくくなりました
  - 画面右下の「▼」のメニューから無効にできます（デフォルトで有効）
 * CHG: 発言詳細部にリプライ先のツイートを表示する際は赤枠で表示し、引用ツイートと区別できるようにしました
 * FIX: リストおよび検索のタブでミュート設定が適用されない不具合を修正 (thx @Tan90909090!)
 * FIX: 「このタブの発言をクリア」を実行時にエラーが発生する不具合を修正
 * FIX: 各タブの「新着通知表示」が無効になっていると通知音が再生されなくなる不具合を修正
 * FIX: Imgurへの画像アップロードがタイムアウトとなった場合のエラーが適切に処理されない不具合を修正
 * FIX: 発言一覧の更新によって選択状態が失われたツイートを選択し直しても発言詳細部に反映されない不具合を修正 (thx @norick_v125!)

==== Ver 1.3.0(2015/12/23)
 * NEW: リプライ先のツイートの内容が発言詳細部に表示されるようにしました
  - 従来通り「関連発言表示」によるリプライチェインの表示も使用できます
 * NEW: NVDAでのタブ名の読み上げに対応しました
 * NEW: OpenTweenで内部エラーが発生した場合にエラーレポートをDMで送信できるようにしました
  - DM で送信する場合は、エラーレポートを圧縮した上で @OpenTween 宛に送られます
 * CHG: Retweetイベントのイベント一覧での表示を他のイベントと統一 (thx @naminodarie!)
 * CHG: スペースキーで未読ツイートに移動する順序を、常に表示順の通りに移動するように修正
  - OpenTween v1.2.4 以前と同じ動作になりました
 * CHG: プロフィール画面の「Web」「自己紹介」に含まれる短縮URLの展開に対応 (thx @naminodarie!)